flowableUI代码优化
(cherry picked from commit 00c1013aca1ecd38294aa650f2e2695cad8d45ce)