@@ -1,25 +1,7 @@
 package net.risesoft.controller.mobile.v1;
 
-import java.net.URLDecoder;
-import java.text.DecimalFormat;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import javax.validation.constraints.NotBlank;
-
-import org.apache.commons.collections.map.CaseInsensitiveMap;
-import org.apache.commons.io.FilenameUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.multipart.MultipartFile;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-
 import net.risesoft.api.itemadmin.FormDataApi;
 import net.risesoft.api.itemadmin.position.Attachment4PositionApi;
 import net.risesoft.api.itemadmin.position.Document4PositionApi;
@@ -40,6 +22,24 @@ import net.risesoft.y9.json.Y9JsonUtil;
 import net.risesoft.y9.util.Y9Util;
 import net.risesoft.y9public.entity.Y9FileStore;
 import net.risesoft.y9public.service.Y9FileStoreService;
+import org.apache.commons.collections.map.CaseInsensitiveMap;
+import org.apache.commons.io.FilenameUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
+
+
+import javax.validation.constraints.NotBlank;
+
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.text.DecimalFormat;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 /**
  * 对接系统接口
@@ -72,29 +72,28 @@ public class MobileV1SystemDockingController {
     /**
      * 对接系统提交接口
      *
-     * @param itemId 事项id
-     * @param mappingId 对接系统标识
+     * @param itemId         事项id
+     * @param mappingId      对接系统标识
      * @param positionChoice 接收岗位id，多岗位,隔开
-     * @param formJsonData 表单数据
-     * @param files 附件列表
-     * @return
-     * @throws Exception
+     * @param formJsonData   表单数据
+     * @param files          附件列表
+     * @return Y9Result<Map < String, Object>>
      */
     @SuppressWarnings("unchecked")
     @RequestMapping(value = "/startAndForwarding")
     public Y9Result<Map<String, Object>> startAndForwarding(@RequestParam @NotBlank String itemId, @RequestParam @NotBlank String mappingId, @RequestParam @NotBlank String routeToTaskId, @RequestParam @NotBlank String positionChoice, @RequestParam @NotBlank String formJsonData,
-        @RequestParam String taskId, @RequestParam(required = false) MultipartFile[] files) {
+                                                            @RequestParam String taskId, @RequestParam(required = false) MultipartFile[] files) {
         try {
             String tenantId = Y9LoginUserHolder.getTenantId();
             String positionId = Y9LoginUserHolder.getPositionId();
-            /**
-             * 1保存表单数据和流转参数数据
+            /*
+              1保存表单数据和流转参数数据
              */
             Map<String, Object> mapFormData = Y9JsonUtil.readValue(formJsonData, Map.class);
             List<ItemMappingConfModel> list = item4PositionApi.getItemMappingConf(tenantId, itemId, mappingId);
             Map<String, Object> bindFormDataMap = new CaseInsensitiveMap();
             for (ItemMappingConfModel mapping : list) {
-                if (null != mapFormData.get(mapping.getMappingName())) {
+                if (mapFormData != null && null != mapFormData.get(mapping.getMappingName())) {
                     String text = mapFormData.get(mapping.getMappingName()).toString();
                     bindFormDataMap.put(mapping.getColumnName(), text);
                 }
@@ -132,16 +131,16 @@ public class MobileV1SystemDockingController {
                     formDataApi.saveFormData(tenantId, formId, bindFormJsonData);
                 }
             }
-            /**
-             * 3启动流程并发送
+            /*
+              3启动流程并发送
              */
             Map<String, Object> map = document4PositionApi.saveAndForwarding(tenantId, positionId, processInstanceId, taskId, "", itemId, guid, item.getWorkflowGuid(), positionChoice, "", routeToTaskId, new HashMap<>());
-            if ((boolean)map.get(UtilConsts.SUCCESS)) {
+            if ((boolean) map.get(UtilConsts.SUCCESS)) {
                 return Y9Result.success(map, "操作成功");
             }
             return Y9Result.failure(map.get("msg").toString());
         } catch (Exception e) {
-            e.printStackTrace();
+            LOGGER.error("startAndForwarding error", e);
             return Y9Result.failure("操作失败");
         }
     }
@@ -149,12 +148,12 @@ public class MobileV1SystemDockingController {
     /**
      * 对接系统提交接口
      *
-     * @param itemId 事项id
-     * @param mappingId 对接系统标识
+     * @param itemId         事项id
+     * @param mappingId      对接系统标识
      * @param positionChoice 接收岗位id，多人,隔开
-     * @param formJsonData 表单数据
-     * @param files 附件列表
-     * @return
+     * @param formJsonData   表单数据
+     * @param files          附件列表
+     * @return Y9Result<Map < String, Object>>
      */
     @SuppressWarnings("unchecked")
     @RequestMapping(value = "/startProcess")
@@ -167,7 +166,7 @@ public class MobileV1SystemDockingController {
             List<ItemMappingConfModel> list = item4PositionApi.getItemMappingConf(tenantId, itemId, mappingId);
             Map<String, Object> bindFormDataMap = new CaseInsensitiveMap();
             for (ItemMappingConfModel mapping : list) {
-                if (null != mapFormData.get(mapping.getMappingName())) {
+                if (mapFormData != null && null != mapFormData.get(mapping.getMappingName())) {
                     String text = mapFormData.get(mapping.getMappingName()).toString();
                     bindFormDataMap.put(mapping.getColumnName(), text);
                 }
@@ -201,23 +200,25 @@ public class MobileV1SystemDockingController {
                     if (!file.isEmpty()) {
                         String originalFilename = file.getOriginalFilename();
                         String fileName = FilenameUtils.getName(originalFilename);
-                        fileName = URLDecoder.decode(fileName, "UTF-8");
+                        if (fileName != null) {
+                            fileName = URLDecoder.decode(fileName, StandardCharsets.UTF_8);
+                        }
                         String fullPath = Y9FileStore.buildPath(Y9Context.getSystemName(), tenantId, "attachmentFile", guid);
                         Y9FileStore y9FileStore = y9FileStoreService.uploadFile(file, fullPath, fileName);
                         DecimalFormat df = new DecimalFormat("#.00");
-                        Long fileSize = file.getSize();
-                        String fileSizeString = "";
+                        long fileSize = file.getSize();
+                        String fileSizeString;
                         if (fileSize < 1024) {
-                            fileSizeString = df.format((double)fileSize) + "B";
+                            fileSizeString = df.format((double) fileSize) + "B";
                         } else if (fileSize < 1048576) {
-                            fileSizeString = df.format((double)fileSize / 1024) + "K";
+                            fileSizeString = df.format((double) fileSize / 1024) + "K";
                         } else if (fileSize < 1073741824) {
-                            fileSizeString = df.format((double)fileSize / 1048576) + "M";
+                            fileSizeString = df.format((double) fileSize / 1048576) + "M";
                         } else {
-                            fileSizeString = df.format((double)fileSize / 1073741824) + "G";
+                            fileSizeString = df.format((double) fileSize / 1073741824) + "G";
                         }
                         Map<String, Object> att_map = attachment4PositionApi.upload(tenantId, userId, positionId, fileName, fileSizeString, "", "", "", guid, "", y9FileStore.getId());
-                        if (!(boolean)att_map.get(UtilConsts.SUCCESS)) {
+                        if (!(boolean) att_map.get(UtilConsts.SUCCESS)) {
                             LOGGER.info("***********************" + title + "**********保存附件失败");
                             return Y9Result.failure("保存附件失败");
                         }
@@ -225,12 +226,12 @@ public class MobileV1SystemDockingController {
                 }
             }
             Map<String, Object> map = document4PositionApi.startProcess(tenantId, positionId, itemId, guid, item.getWorkflowGuid(), positionChoice);
-            if ((boolean)map.get(UtilConsts.SUCCESS)) {
+            if ((boolean) map.get(UtilConsts.SUCCESS)) {
                 return Y9Result.success(map, "提交成功");
             }
             return Y9Result.failure(map.get("msg").toString());
         } catch (Exception e) {
-            e.printStackTrace();
+            LOGGER.error("提交失败", e);
             return Y9Result.failure("提交失败");
         }
     }
