@@ -1,34 +1,7 @@
 package net.risesoft.controller.services;
 
-import java.io.BufferedInputStream;
-import java.io.ByteArrayInputStream;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.OutputStream;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import javax.servlet.ServletOutputStream;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.springframework.ui.Model;
-import org.springframework.ui.ModelMap;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.multipart.MultipartHttpServletRequest;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-
 import net.risesoft.api.itemadmin.ProcessParamApi;
 import net.risesoft.api.itemadmin.TransactionWordApi;
 import net.risesoft.api.itemadmin.position.Draft4PositionApi;
@@ -45,6 +18,30 @@ import net.risesoft.y9.Y9Context;
 import net.risesoft.y9.Y9LoginUserHolder;
 import net.risesoft.y9public.entity.Y9FileStore;
 import net.risesoft.y9public.service.Y9FileStoreService;
+import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.io.IOUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.ui.Model;
+import org.springframework.ui.ModelMap;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.multipart.MultipartHttpServletRequest;
+
+
+import javax.servlet.ServletOutputStream;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+import java.io.*;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Validated
 @RequiredArgsConstructor
@@ -70,12 +67,13 @@ public class FormNTKOController {
     /**
      * 删除指定类型的正文
      *
-     * @param isTaoHong 是否套红
+     * @param isTaoHong           是否套红
      * @param processSerialNumber 流程编号
-     * @param response
+     * @param tenantId            租户id
+     * @param userId              人员id
      */
     @RequestMapping(value = "/deleteWordByIsTaoHong")
-    public void deleteWordByIsTaoHong(@RequestParam String isTaoHong, @RequestParam String processSerialNumber, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response) {
+    public void deleteWordByIsTaoHong(@RequestParam String isTaoHong, @RequestParam String processSerialNumber, @RequestParam String tenantId, @RequestParam String userId) {
         Y9LoginUserHolder.setTenantId(tenantId);
         Person person = personApi.get(tenantId, userId).getData();
         Y9LoginUserHolder.setPerson(person);
@@ -83,19 +81,30 @@ public class FormNTKOController {
     }
 
     /**
-     * 下载正文
+     * 下载历史正文
      *
-     * @param id 正文id
-     * @param response
-     * @param request
+     * @param taskId              任务id
+     * @param processSerialNumber 流程编号
+     * @param processInstanceId   流程实例id
+     * @param fileType            文件类型
+     * @param tenantId            租户id
+     * @param userId              人员id
      */
-    @RequestMapping(value = "/download")
-    public void download(@RequestParam String id, @RequestParam String fileType, @RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response, HttpServletRequest request) {
+    @RequestMapping(value = "/downLoadHistoryDoc")
+    public void downLoadHistoryDoc(@RequestParam String taskId, @RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String fileType, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response, HttpServletRequest request) {
+        Y9LoginUserHolder.setTenantId(tenantId);
+        Person person = personApi.get(tenantId, userId).getData();
+        Y9LoginUserHolder.setPerson(person);
+        Map<String, Object> map = transactionWordApi.findHistoryVersionDoc(tenantId, userId, taskId);
+        String fileStoreId = map.get("fileStoreId").toString();
+        ServletOutputStream out;
         try {
-            Y9LoginUserHolder.setTenantId(tenantId);
-            Person person = personApi.get(tenantId, userId).getData();
-            Y9LoginUserHolder.setPerson(person);
-            Object documentTitle = null;
+            out = response.getOutputStream();
+            // Y9FileStore y9FileStore = y9FileStoreService.getById(fileStoreId);
+            // String fileName = y9FileStore.getFileName();
+            String userAgent = request.getHeader("User-Agent");
+            String title;
+            Object documentTitle;
             if (StringUtils.isBlank(processInstanceId)) {
                 Map<String, Object> retMap = draft4PositionApi.getDraftByProcessSerialNumber(tenantId, processSerialNumber);
                 documentTitle = retMap.get("title");
@@ -103,22 +112,74 @@ public class FormNTKOController {
                 ProcessParamModel processModel = processParamApi.findByProcessInstanceId(tenantId, processInstanceId);
                 documentTitle = processModel.getTitle();
             }
-            String title = documentTitle != null ? (String)documentTitle : "正文";
-            // Y9FileStore y9FileStore = y9FileStoreService.getById(id);
-            // String fileName = y9FileStore.getFileName();
+            title = documentTitle != null ? (String) documentTitle : "正文";
             title = ToolUtil.replaceSpecialStr(title);
-            String userAgent = request.getHeader("User-Agent");
-            if (-1 < userAgent.indexOf("MSIE 8.0") || -1 < userAgent.indexOf("MSIE 6.0") || -1 < userAgent.indexOf("MSIE 7.0")) {
+            if (userAgent.contains("MSIE 8.0") || userAgent.contains("MSIE 6.0") || userAgent.contains("MSIE 7.0")) {
                 title = new String(title.getBytes("gb2312"), "ISO8859-1");
                 response.reset();
                 response.setHeader("Content-disposition", "attachment; filename=\"" + title + fileType + "\"");
                 response.setHeader("Content-type", "text/html;charset=GBK");
                 response.setContentType("application/octet-stream");
             } else {
-                if (-1 != userAgent.indexOf("Firefox")) {
-                    title = "=?UTF-8?B?" + (new String(org.apache.commons.codec.binary.Base64.encodeBase64(title.getBytes("UTF-8")))) + "?=";
+                if (userAgent.contains("Firefox")) {
+                    title = "=?UTF-8?B?" + (new String(Base64.encodeBase64(title.getBytes(StandardCharsets.UTF_8)))) + "?=";
                 } else {
-                    title = java.net.URLEncoder.encode(title, "UTF-8");
+                    title = URLEncoder.encode(title, StandardCharsets.UTF_8);
+                    title = StringUtils.replace(title, "+", "%20");// 替换空格
+                }
+                response.reset();
+                response.setHeader("Content-disposition", "attachment; filename=\"" + title + fileType + "\"");
+                response.setHeader("Content-type", "text/html;charset=UTF-8");
+                response.setContentType("application/octet-stream");
+            }
+            y9FileStoreService.downloadFileToOutputStream(fileStoreId, out);
+            out.flush();
+            out.close();
+        } catch (Exception e) {
+            LOGGER.error("下载历史正文失败", e);
+        }
+    }
+
+    /**
+     * 下载正文
+     *
+     * @param id                  文件id
+     * @param fileType            文件类型
+     * @param processSerialNumber 流程编号
+     * @param processInstanceId   流程实例id
+     * @param tenantId            租户id
+     * @param userId              人员id
+     */
+    @RequestMapping(value = "/download")
+    public void download(@RequestParam String id, @RequestParam String fileType, @RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response, HttpServletRequest request) {
+        try {
+            Y9LoginUserHolder.setTenantId(tenantId);
+            Person person = personApi.get(tenantId, userId).getData();
+            Y9LoginUserHolder.setPerson(person);
+            Object documentTitle;
+            if (StringUtils.isBlank(processInstanceId)) {
+                Map<String, Object> retMap = draft4PositionApi.getDraftByProcessSerialNumber(tenantId, processSerialNumber);
+                documentTitle = retMap.get("title");
+            } else {
+                ProcessParamModel processModel = processParamApi.findByProcessInstanceId(tenantId, processInstanceId);
+                documentTitle = processModel.getTitle();
+            }
+            String title = documentTitle != null ? (String) documentTitle : "正文";
+            // Y9FileStore y9FileStore = y9FileStoreService.getById(id);
+            // String fileName = y9FileStore.getFileName();
+            title = ToolUtil.replaceSpecialStr(title);
+            String userAgent = request.getHeader("User-Agent");
+            if (userAgent.contains("MSIE 8.0") || userAgent.contains("MSIE 6.0") || userAgent.contains("MSIE 7.0")) {
+                title = new String(title.getBytes("gb2312"), "ISO8859-1");
+                response.reset();
+                response.setHeader("Content-disposition", "attachment; filename=\"" + title + fileType + "\"");
+                response.setHeader("Content-type", "text/html;charset=GBK");
+                response.setContentType("application/octet-stream");
+            } else {
+                if (userAgent.contains("Firefox")) {
+                    title = "=?UTF-8?B?" + (new String(Base64.encodeBase64(title.getBytes(StandardCharsets.UTF_8)))) + "?=";
+                } else {
+                    title = URLEncoder.encode(title, StandardCharsets.UTF_8);
                     title = StringUtils.replace(title, "+", "%20");// 替换空格
                 }
                 response.reset();
@@ -131,16 +192,18 @@ public class FormNTKOController {
             out.flush();
             out.close();
         } catch (Exception e) {
-            e.printStackTrace();
+            LOGGER.error("下载正文失败", e);
         }
     }
 
     /**
      * 下载正文（抄送）
      *
-     * @param id 中文id
-     * @param response
-     * @param request
+     * @param fileType            文件类型
+     * @param processSerialNumber 流程编号
+     * @param processInstanceId   流程实例id
+     * @param tenantId            租户id
+     * @param userId              人员id
      */
     @RequestMapping(value = "/downloadCS")
     public void downloadCS(@RequestParam String fileType, @RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response, HttpServletRequest request) {
@@ -150,7 +213,7 @@ public class FormNTKOController {
             Y9LoginUserHolder.setPerson(person);
             Map<String, Object> map = transactionWordApi.findWordByProcessSerialNumber(tenantId, processSerialNumber);
             String fileStoreId = map.get("fileStoreId").toString();
-            Object documentTitle = null;
+            Object documentTitle;
             if (StringUtils.isBlank(processInstanceId)) {
                 Map<String, Object> retMap = draft4PositionApi.getDraftByProcessSerialNumber(tenantId, processSerialNumber);
                 documentTitle = retMap.get("title");
@@ -158,22 +221,22 @@ public class FormNTKOController {
                 ProcessParamModel processModel = processParamApi.findByProcessInstanceId(tenantId, processInstanceId);
                 documentTitle = processModel.getTitle();
             }
-            String title = documentTitle != null ? (String)documentTitle : "正文";
+            String title = documentTitle != null ? (String) documentTitle : "正文";
             // Y9FileStore y9FileStore = y9FileStoreService.getById(id);
             // String fileName = y9FileStore.getFileName();
             title = ToolUtil.replaceSpecialStr(title);
             String userAgent = request.getHeader("User-Agent");
-            if (-1 < userAgent.indexOf("MSIE 8.0") || -1 < userAgent.indexOf("MSIE 6.0") || -1 < userAgent.indexOf("MSIE 7.0")) {
+            if (userAgent.contains("MSIE 8.0") || userAgent.contains("MSIE 6.0") || userAgent.contains("MSIE 7.0")) {
                 title = new String(title.getBytes("gb2312"), "ISO8859-1");
                 response.reset();
                 response.setHeader("Content-disposition", "attachment; filename=\"" + title + fileType + "\"");
                 response.setHeader("Content-type", "text/html;charset=GBK");
                 response.setContentType("application/octet-stream");
             } else {
-                if (-1 != userAgent.indexOf("Firefox")) {
-                    title = "=?UTF-8?B?" + (new String(org.apache.commons.codec.binary.Base64.encodeBase64(title.getBytes("UTF-8")))) + "?=";
+                if (userAgent.contains("Firefox")) {
+                    title = "=?UTF-8?B?" + (new String(Base64.encodeBase64(title.getBytes(StandardCharsets.UTF_8)))) + "?=";
                 } else {
-                    title = java.net.URLEncoder.encode(title, "UTF-8");
+                    title = URLEncoder.encode(title, StandardCharsets.UTF_8);
                     title = StringUtils.replace(title, "+", "%20");// 替换空格
                 }
                 response.reset();
@@ -186,78 +249,19 @@ public class FormNTKOController {
             out.flush();
             out.close();
         } catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
-
-    /**
-     * 下载历史正文
-     *
-     * @param taskId 任务id
-     * @param processSerialNumber 流程编号
-     * @param processInstanceId 流程实例id
-     * @param fileType 文件类型
-     * @param tenantId 租户id
-     * @param userId 人员id
-     * @param response
-     * @param request
-     */
-    @RequestMapping(value = "/downLoadHistoryDoc")
-    public void downLoadHistoryDoc(@RequestParam String taskId, @RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String fileType, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response, HttpServletRequest request) {
-        Y9LoginUserHolder.setTenantId(tenantId);
-        Person person = personApi.get(tenantId, userId).getData();
-        Y9LoginUserHolder.setPerson(person);
-        Map<String, Object> map = transactionWordApi.findHistoryVersionDoc(tenantId, userId, taskId);
-        String fileStoreId = map.get("fileStoreId").toString();
-        ServletOutputStream out = null;
-        try {
-            out = response.getOutputStream();
-            // Y9FileStore y9FileStore = y9FileStoreService.getById(fileStoreId);
-            // String fileName = y9FileStore.getFileName();
-            String userAgent = request.getHeader("User-Agent");
-            String title = "";
-            Object documentTitle = null;
-            if (StringUtils.isBlank(processInstanceId)) {
-                Map<String, Object> retMap = draft4PositionApi.getDraftByProcessSerialNumber(tenantId, processSerialNumber);
-                documentTitle = retMap.get("title");
-            } else {
-                ProcessParamModel processModel = processParamApi.findByProcessInstanceId(tenantId, processInstanceId);
-                documentTitle = processModel.getTitle();
-            }
-            title = documentTitle != null ? (String)documentTitle : "正文";
-            title = ToolUtil.replaceSpecialStr(title);
-            if (-1 < userAgent.indexOf("MSIE 8.0") || -1 < userAgent.indexOf("MSIE 6.0") || -1 < userAgent.indexOf("MSIE 7.0")) {
-                title = new String(title.getBytes("gb2312"), "ISO8859-1");
-                response.reset();
-                response.setHeader("Content-disposition", "attachment; filename=\"" + title + fileType + "\"");
-                response.setHeader("Content-type", "text/html;charset=GBK");
-                response.setContentType("application/octet-stream");
-            } else {
-                if (-1 != userAgent.indexOf("Firefox")) {
-                    title = "=?UTF-8?B?" + (new String(org.apache.commons.codec.binary.Base64.encodeBase64(title.getBytes("UTF-8")))) + "?=";
-                } else {
-                    title = java.net.URLEncoder.encode(title, "UTF-8");
-                    title = StringUtils.replace(title, "+", "%20");// 替换空格
-                }
-                response.reset();
-                response.setHeader("Content-disposition", "attachment; filename=\"" + title + fileType + "\"");
-                response.setHeader("Content-type", "text/html;charset=UTF-8");
-                response.setContentType("application/octet-stream");
-            }
-            y9FileStoreService.downloadFileToOutputStream(fileStoreId, out);
-            out.flush();
-            out.close();
-        } catch (Exception e) {
-            e.printStackTrace();
+            LOGGER.error("下载正文失败", e);
         }
     }
 
     /**
      * 下载正文
      *
-     * @param id 正文id
-     * @param response
-     * @param request
+     * @param id                  正文id
+     * @param fileType            文件类型
+     * @param processSerialNumber 流程编号
+     * @param processInstanceId   流程实例id
+     * @param tenantId            租户id
+     * @param userId              人员id
      */
     @RequestMapping(value = "/downloadWord")
     public void downloadWord(@RequestParam String id, @RequestParam String fileType, @RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response, HttpServletRequest request) {
@@ -265,7 +269,7 @@ public class FormNTKOController {
             Y9LoginUserHolder.setTenantId(tenantId);
             Person person = personApi.get(tenantId, userId).getData();
             Y9LoginUserHolder.setPerson(person);
-            Object documentTitle = null;
+            String documentTitle;
             String[] pId = processInstanceId.split(",");
             processInstanceId = pId[0];
             if (StringUtils.isBlank(processInstanceId)) {
@@ -275,22 +279,22 @@ public class FormNTKOController {
                 ProcessParamModel processModel = processParamApi.findByProcessInstanceId(tenantId, processInstanceId);
                 documentTitle = processModel.getTitle();
             }
-            String title = documentTitle != null ? (String)documentTitle : "正文";
+            String title = documentTitle != null ? documentTitle : "正文";
             // Y9FileStore y9FileStore = y9FileStoreService.getById(id);
             // String fileName = y9FileStore.getFileName();
             title = ToolUtil.replaceSpecialStr(title);
             String userAgent = request.getHeader("User-Agent");
-            if (-1 < userAgent.indexOf("MSIE 8.0") || -1 < userAgent.indexOf("MSIE 6.0") || -1 < userAgent.indexOf("MSIE 7.0")) {
+            if (userAgent.contains("MSIE 8.0") || userAgent.contains("MSIE 6.0") || userAgent.contains("MSIE 7.0")) {
                 title = new String(title.getBytes("gb2312"), "ISO8859-1");
                 response.reset();
                 response.setHeader("Content-disposition", "attachment; filename=\"" + title + fileType + "\"");
                 response.setHeader("Content-type", "text/html;charset=GBK");
                 response.setContentType("application/octet-stream");
             } else {
-                if (-1 != userAgent.indexOf("Firefox")) {
-                    title = "=?UTF-8?B?" + (new String(org.apache.commons.codec.binary.Base64.encodeBase64(title.getBytes("UTF-8")))) + "?=";
+                if (userAgent.contains("Firefox")) {
+                    title = "=?UTF-8?B?" + (new String(Base64.encodeBase64(title.getBytes(StandardCharsets.UTF_8)))) + "?=";
                 } else {
-                    title = java.net.URLEncoder.encode(title, "UTF-8");
+                    title = URLEncoder.encode(title, StandardCharsets.UTF_8);
                     title = StringUtils.replace(title, "+", "%20");// 替换空格
                 }
                 response.reset();
@@ -303,17 +307,17 @@ public class FormNTKOController {
             out.flush();
             out.close();
         } catch (Exception e) {
-            e.printStackTrace();
+            LOGGER.error("下载正文失败", e);
         }
     }
 
     /**
      * 获取正文信息
      *
-     * @param tenantId 租户id
-     * @param userId 人员id
+     * @param tenantId            租户id
+     * @param userId              人员id
      * @param processSerialNumber 流程编号
-     * @return
+     * @return Map
      */
     @RequestMapping(value = "/getUpdateWord")
     public Map<String, Object> getUpdateWord(@RequestParam String tenantId, @RequestParam String userId, @RequestParam String processSerialNumber) {
@@ -325,7 +329,7 @@ public class FormNTKOController {
             map = transactionWordApi.findWordByProcessSerialNumber(tenantId, processSerialNumber);
         } catch (Exception e) {
             map.put(UtilConsts.SUCCESS, false);
-            e.printStackTrace();
+            LOGGER.error("获取正文信息失败", e);
         }
         return map;
     }
@@ -342,10 +346,10 @@ public class FormNTKOController {
             File file = new File(filePath);
             String fileName = file.getName();
             String agent = request.getHeader("USER-AGENT");
-            if (-1 != agent.indexOf("Firefox")) {
-                fileName = "=?UTF-8?B?" + (new String(org.apache.commons.codec.binary.Base64.encodeBase64(fileName.getBytes("UTF-8")))) + "?=";
+            if (agent.contains("Firefox")) {
+                fileName = "=?UTF-8?B?" + (new String(Base64.encodeBase64(fileName.getBytes(StandardCharsets.UTF_8)))) + "?=";
             } else {
-                fileName = java.net.URLEncoder.encode(fileName, "UTF-8");
+                fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
                 fileName = StringUtils.replace(fileName, "+", "%20");// 替换空格
             }
             response.reset();
@@ -354,19 +358,23 @@ public class FormNTKOController {
             FileInputStream fs = new FileInputStream(file);
             bi = IOUtils.buffer(fs);
             out = response.getOutputStream();
-            int b = 0;
+            int b;
             byte[] by = new byte[1024];
             while ((b = bi.read(by)) != -1) {
                 out.write(by, 0, b);
             }
         } catch (Exception e) {
-            e.printStackTrace();
+            LOGGER.error("新建正文空白模板失败", e);
         } finally {
             try {
-                bi.close();
-                out.close();
+                if (bi != null) {
+                    bi.close();
+                }
+                if (out != null) {
+                    out.close();
+                }
             } catch (IOException e) {
-                e.printStackTrace();
+                LOGGER.error("关闭流失败", e);
             }
         }
     }
@@ -375,7 +383,9 @@ public class FormNTKOController {
      * 打开正文
      *
      * @param processSerialNumber 流程编号
-     * @param itemId 事项id
+     * @param itemId              事项id
+     * @param tenantId            租户id
+     * @param userId              人员id
      */
     @RequestMapping(value = "/openDoc")
     public void openDoc(@RequestParam String processSerialNumber, @RequestParam String itemId, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response, HttpServletRequest request) {
@@ -389,11 +399,11 @@ public class FormNTKOController {
             String agent = request.getHeader("USER-AGENT");
             Y9FileStore y9FileStore = y9FileStoreService.getById(y9FileStoreId);
             String fileName = y9FileStore.getFileName();
-            if (-1 != agent.indexOf("Firefox")) {
-                fileName = "=?UTF-8?B?" + (new String(org.apache.commons.codec.binary.Base64.encodeBase64(fileName.getBytes("UTF-8")))) + "?=";
+            if (agent.contains("Firefox")) {
+                Base64.encodeBase64(fileName.getBytes(StandardCharsets.UTF_8));
             } else {
-                fileName = java.net.URLEncoder.encode(fileName, "UTF-8");
-                fileName = StringUtils.replace(fileName, "+", "%20");// 替换空格
+                fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
+                StringUtils.replace(fileName, "+", "%20");
             }
             response.reset();
             // response.setHeader("Content-Type", "application/msword");
@@ -404,21 +414,28 @@ public class FormNTKOController {
             try {
                 buf = y9FileStoreService.downloadFileToBytes(y9FileStoreId);
             } catch (Exception e) {
-                e.printStackTrace();
+                LOGGER.error("下载正文失败", e);
             }
-            ByteArrayInputStream bin = new ByteArrayInputStream(buf);
-            int b = 0;
+            ByteArrayInputStream bin = null;
+            if (buf != null) {
+                bin = new ByteArrayInputStream(buf);
+            }
+            int b;
             byte[] by = new byte[1024];
-            while ((b = bin.read(by)) != -1) {
-                out.write(by, 0, b);
+            if (bin != null) {
+                while ((b = bin.read(by)) != -1) {
+                    out.write(by, 0, b);
+                }
             }
         } catch (IOException e) {
-            e.printStackTrace();
+            LOGGER.error("打开正文失败", e);
         } finally {
             try {
-                out.close();
+                if (out != null) {
+                    out.close();
+                }
             } catch (IOException e) {
-                e.printStackTrace();
+                LOGGER.error("关闭流失败", e);
             }
         }
     }
@@ -426,11 +443,10 @@ public class FormNTKOController {
     /**
      * 套红模板
      *
-     * @param templateGUID 模板id
+     * @param templateGUID        模板id
      * @param processSerialNumber 流程编号
-     * @param tenantId 租户id
-     * @param userId 人员id
-     * @param response
+     * @param tenantId            租户id
+     * @param userId              人员id
      */
     @RequestMapping(value = "/openTaohongTemplate")
     public void openDocumentTemplate(@RequestParam String templateGUID, @RequestParam String processSerialNumber, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response) {
@@ -441,11 +457,11 @@ public class FormNTKOController {
         String content = transactionWordApi.openDocumentTemplate(tenantId, userId, templateGUID);
         ServletOutputStream out = null;
         try {
-            byte[] result = null;
+            byte[] result;
             out = response.getOutputStream();
             result = jodd.util.Base64.decode(content);
             ByteArrayInputStream bin = new ByteArrayInputStream(result);
-            int b = 0;
+            int b;
             byte[] by = new byte[1024];
             response.reset();
             response.setHeader("Content-Type", "application/msword");
@@ -454,12 +470,14 @@ public class FormNTKOController {
                 out.write(by, 0, b);
             }
         } catch (IOException e) {
-            e.printStackTrace();
+            LOGGER.error("套红正文失败", e);
         } finally {
             try {
-                out.close();
+                if (out != null) {
+                    out.close();
+                }
             } catch (IOException e) {
-                e.printStackTrace();
+                LOGGER.error("关闭流失败", e);
             }
         }
     }
@@ -467,15 +485,12 @@ public class FormNTKOController {
     /**
      * 打开历史正文
      *
-     * @param taskId 任务id
-     * @param itemId 事项id
+     * @param taskId   任务id
      * @param tenantId 租户id
-     * @param userId 人员id
-     * @param response
-     * @param request
+     * @param userId   人员id
      */
     @RequestMapping(value = "/openHistoryVersionDoc")
-    public void openHistoryVersionDoc(@RequestParam String taskId, @RequestParam String itemId, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response, HttpServletRequest request) {
+    public void openHistoryVersionDoc(@RequestParam String taskId, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response, HttpServletRequest request) {
         Y9LoginUserHolder.setTenantId(tenantId);
         Person person = personApi.get(tenantId, userId).getData();
         Y9LoginUserHolder.setPerson(person);
@@ -486,11 +501,11 @@ public class FormNTKOController {
             String agent = request.getHeader("USER-AGENT");
             Y9FileStore y9FileStore = y9FileStoreService.getById(fileStoreId);
             String fileName = y9FileStore.getFileName();
-            if (-1 != agent.indexOf("Firefox")) {
-                fileName = "=?UTF-8?B?" + (new String(org.apache.commons.codec.binary.Base64.encodeBase64(fileName.getBytes("UTF-8")))) + "?=";
+            if (agent.contains("Firefox")) {
+                Base64.encodeBase64(fileName.getBytes(StandardCharsets.UTF_8));
             } else {
-                fileName = java.net.URLEncoder.encode(fileName, "UTF-8");
-                fileName = StringUtils.replace(fileName, "+", "%20");// 替换空格
+                fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
+                StringUtils.replace(fileName, "+", "%20");
             }
             response.reset();
             // response.setHeader("Content-Type", "application/msword");
@@ -502,21 +517,28 @@ public class FormNTKOController {
             try {
                 buf = y9FileStoreService.downloadFileToBytes(fileStoreId);
             } catch (Exception e) {
-                e.printStackTrace();
+                LOGGER.error("下载正文失败", e);
             }
-            ByteArrayInputStream bin = new ByteArrayInputStream(buf);
-            int b = 0;
+            ByteArrayInputStream bin = null;
+            if (buf != null) {
+                bin = new ByteArrayInputStream(buf);
+            }
+            int b;
             byte[] by = new byte[1024];
-            while ((b = bin.read(by)) != -1) {
-                out.write(by, 0, b);
+            if (bin != null) {
+                while ((b = bin.read(by)) != -1) {
+                    out.write(by, 0, b);
+                }
             }
         } catch (IOException e) {
-            e.printStackTrace();
+            LOGGER.error("打开正文失败", e);
         } finally {
             try {
-                out.close();
+                if (out != null) {
+                    out.close();
+                }
             } catch (IOException e) {
-                e.printStackTrace();
+                LOGGER.error("关闭流失败", e);
             }
         }
     }
@@ -525,9 +547,8 @@ public class FormNTKOController {
      * 打开PDF或者TIF文件
      *
      * @param processSerialNumber 流程编号
-     * @param tenantId 租户id
-     * @param userId 人员id
-     * @param response
+     * @param tenantId            租户id
+     * @param userId              人员id
      */
     @RequestMapping(value = "/openPdf")
     public void openPdf(@RequestParam String processSerialNumber, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response) {
@@ -543,25 +564,34 @@ public class FormNTKOController {
             try {
                 buf = y9FileStoreService.downloadFileToBytes(y9FileStoreId);
             } catch (Exception e) {
-                e.printStackTrace();
+                LOGGER.error("下载正文失败", e);
             }
-            ByteArrayInputStream bin = new ByteArrayInputStream(buf);
-            int b = 0;
+            ByteArrayInputStream bin = null;
+            if (buf != null) {
+                bin = new ByteArrayInputStream(buf);
+            }
+            int b;
             byte[] by = new byte[1024];
             response.reset();
             // response.setHeader("Content-Type", "application/msword");
-            response.setHeader("Content-Length", String.valueOf(buf.length));
-            while ((b = bin.read(by)) != -1) {
-                out.write(by, 0, b);
-                out.flush();
+            if (buf != null) {
+                response.setHeader("Content-Length", String.valueOf(buf.length));
+            }
+            if (bin != null) {
+                while ((b = bin.read(by)) != -1) {
+                    out.write(by, 0, b);
+                    out.flush();
+                }
             }
         } catch (IOException e) {
-            e.printStackTrace();
+            LOGGER.error("打开正文失败", e);
         } finally {
             try {
-                out.close();
+                if (out != null) {
+                    out.close();
+                }
             } catch (IOException e) {
-                e.printStackTrace();
+                LOGGER.error("关闭流失败", e);
             }
         }
     }
@@ -570,11 +600,9 @@ public class FormNTKOController {
      * 打开撤销PDF后的正文
      *
      * @param processSerialNumber 流程编号
-     * @param istaohong 是否套红
-     * @param tenantId 租户id
-     * @param userId 人员id
-     * @param response
-     * @param request
+     * @param istaohong           是否套红
+     * @param tenantId            租户id
+     * @param userId              人员id
      */
     @RequestMapping(value = "/openRevokePDFAfterDocument")
     public void openRevokePDFAfterDocument(@RequestParam String processSerialNumber, @RequestParam String istaohong, @RequestParam String tenantId, @RequestParam String userId, HttpServletResponse response, HttpServletRequest request) {
@@ -590,10 +618,10 @@ public class FormNTKOController {
             String agent = request.getHeader("USER-AGENT");
             Y9FileStore y9FileStore = y9FileStoreService.getById(y9FileStoreId);
             String fileName = y9FileStore.getFileName();
-            if (-1 != agent.indexOf("Firefox")) {
-                fileName = "=?UTF-8?B?" + (new String(org.apache.commons.codec.binary.Base64.encodeBase64(fileName.getBytes("UTF-8")))) + "?=";
+            if (agent.contains("Firefox")) {
+                fileName = "=?UTF-8?B?" + (new String(Base64.encodeBase64(fileName.getBytes(StandardCharsets.UTF_8)))) + "?=";
             } else {
-                fileName = java.net.URLEncoder.encode(fileName, "UTF-8");
+                fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
                 fileName = StringUtils.replace(fileName, "+", "%20");// 替换空格
             }
             response.reset();
@@ -605,21 +633,28 @@ public class FormNTKOController {
             try {
                 buf = y9FileStoreService.downloadFileToBytes(y9FileStoreId);
             } catch (Exception e) {
-                e.printStackTrace();
+                LOGGER.error("下载正文失败", e);
             }
-            ByteArrayInputStream bin = new ByteArrayInputStream(buf);
-            int b = 0;
+            ByteArrayInputStream bin = null;
+            if (buf != null) {
+                bin = new ByteArrayInputStream(buf);
+            }
+            int b;
             byte[] by = new byte[1024];
-            while ((b = bin.read(by)) != -1) {
-                out.write(by, 0, b);
+            if (bin != null) {
+                while ((b = bin.read(by)) != -1) {
+                    out.write(by, 0, b);
+                }
             }
         } catch (IOException e) {
-            e.printStackTrace();
+            LOGGER.error("打开正文失败", e);
         } finally {
             try {
-                out.close();
+                if (out != null) {
+                    out.close();
+                }
             } catch (IOException e) {
-                e.printStackTrace();
+                LOGGER.error("关闭流失败", e);
             }
         }
     }
@@ -628,10 +663,9 @@ public class FormNTKOController {
      * 选择套红
      *
      * @param activitiUser 人员id
-     * @param tenantId 租户id
-     * @param userId 人员id
-     * @param model
-     * @return
+     * @param tenantId     租户id
+     * @param userId       人员id
+     * @return String
      */
     @RequestMapping(value = "/openTaoHong")
     public String openTaoHong(@RequestParam String activitiUser, @RequestParam String tenantId, @RequestParam String userId, Model model) {
@@ -648,31 +682,30 @@ public class FormNTKOController {
     /**
      * 保存word转PDF的正文
      *
-     * @param fileType 文件类型
+     * @param fileType            文件类型
      * @param processSerialNumber 流程编号
-     * @param processInstanceId 流程实例id
-     * @param isTaoHong 是否套红
-     * @param taskId 任务id
-     * @param tenantId 租户id
-     * @param userId 人员id
-     * @param request
-     * @param response
+     * @param processInstanceId   流程实例id
+     * @param isTaoHong           是否套红
+     * @param taskId              任务id
+     * @param tenantId            租户id
+     * @param userId              人员id
+     * @return String
      */
     @SuppressWarnings("unused")
     @RequestMapping(value = "/saveAsPDFFile")
-    public void saveAsPDFFile(@RequestParam String fileType, @RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String isTaoHong, @RequestParam String taskId, @RequestParam String tenantId, @RequestParam String userId, HttpServletRequest request,
-        HttpServletResponse response) {
+    public String saveAsPDFFile(@RequestParam String fileType, @RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String isTaoHong, @RequestParam String taskId, @RequestParam String tenantId, @RequestParam String userId, HttpServletRequest request,
+                                HttpServletResponse response) {
         response.setContentType("text/html; charset=utf-8");
         response.setHeader("Cache-Control", "no-cache");
         Y9LoginUserHolder.setTenantId(tenantId);
         Person person = personApi.get(tenantId, userId).getData();
         Y9LoginUserHolder.setPerson(person);
-        MultipartHttpServletRequest multipartRequest = (MultipartHttpServletRequest)request;
+        MultipartHttpServletRequest multipartRequest = (MultipartHttpServletRequest) request;
         MultipartFile multipartFile = multipartRequest.getFile("currentDoc");
-        String title = "";
+        String title;
         String result = "success:false";
         try {
-            Object documentTitle = null;
+            Object documentTitle;
             if (StringUtils.isBlank(processInstanceId)) {
                 Map<String, Object> retMap = draft4PositionApi.getDraftByProcessSerialNumber(tenantId, processSerialNumber);
                 documentTitle = retMap.get("title");
@@ -680,13 +713,14 @@ public class FormNTKOController {
                 ProcessParamModel processModel = processParamApi.findByProcessInstanceId(tenantId, processInstanceId);
                 documentTitle = processModel.getTitle();
             }
-            title = documentTitle != null ? (String)documentTitle : "正文";
+            title = documentTitle != null ? (String) documentTitle : "正文";
             String fullPath = Y9FileStore.buildPath(Y9Context.getSystemName(), tenantId, "PDF", processSerialNumber);
             Y9FileStore y9FileStore = y9FileStoreService.uploadFile(multipartFile, fullPath, title + fileType);
             result = transactionWordApi.uploadWord(tenantId, userId, title, fileType, processSerialNumber, isTaoHong, taskId, y9FileStore.getDisplayFileSize(), y9FileStore.getId());
         } catch (Exception e) {
-            e.printStackTrace();
+            LOGGER.error("保存正文失败", e);
         }
+        return result;
     }
 
     @RequestMapping("/showDownPdfTool")
@@ -710,23 +744,22 @@ public class FormNTKOController {
      * 获取正文
      *
      * @param processSerialNumber 流程编号
-     * @param processInstanceId 流程实例id
-     * @param itemId 事项id
-     * @param itembox 状态
-     * @param taskId 任务id
-     * @param browser 浏览器
-     * @param positionId 岗位id
-     * @param tenantId 租户id
-     * @param userId 人员id
-     * @param model
-     * @return
+     * @param processInstanceId   流程实例id
+     * @param itemId              事项id
+     * @param itembox             状态
+     * @param taskId              任务id
+     * @param browser             浏览器
+     * @param positionId          岗位id
+     * @param tenantId            租户id
+     * @param userId              人员id
+     * @return String
      */
     @RequestMapping("/showWord")
     public String showWord(@RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String itemId, @RequestParam String itembox, @RequestParam String taskId, @RequestParam String browser, @RequestParam String positionId, @RequestParam String tenantId,
-        @RequestParam String userId, Model model) {
+                           @RequestParam String userId, Model model) {
         Map<String, Object> map = transactionWordApi.showWord(tenantId, userId, processSerialNumber, itemId, itembox, taskId);
         model.addAllAttributes(map);
-        Object documentTitle = null;
+        Object documentTitle;
         if (StringUtils.isBlank(processInstanceId)) {
             Map<String, Object> retMap = draft4PositionApi.getDraftByProcessSerialNumber(tenantId, processSerialNumber);
             documentTitle = retMap.get("title");
@@ -749,10 +782,10 @@ public class FormNTKOController {
      * 获取套红模板列表
      *
      * @param currentBureauGuid 委办局id
-     * @param tenantId 租户id
-     * @param userId 人员id
-     * @param positionId 岗位id
-     * @return
+     * @param tenantId          租户id
+     * @param userId            人员id
+     * @param positionId        岗位id
+     * @return List<Map < String, Object>>
      */
     @RequestMapping(value = "/list")
     public List<Map<String, Object>> taoHongTemplateList(@RequestParam String currentBureauGuid, @RequestParam String tenantId, @RequestParam String userId, @RequestParam String positionId) {
@@ -770,12 +803,12 @@ public class FormNTKOController {
      * 上传正文
      *
      * @param processSerialNumber 流程编号
-     * @param processInstanceId 流程实例id
-     * @param taskId 任务id
-     * @param tenantId 租户id
-     * @param userId 人员id
-     * @param file 文件
-     * @return
+     * @param processInstanceId   流程实例id
+     * @param taskId              任务id
+     * @param tenantId            租户id
+     * @param userId              人员id
+     * @param file                文件
+     * @return Map<String, Object>
      */
     @RequestMapping(value = "/upload", method = RequestMethod.POST)
     public Map<String, Object> upload(@RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String taskId, @RequestParam String tenantId, @RequestParam String userId, @RequestParam MultipartFile file) {
@@ -788,25 +821,30 @@ public class FormNTKOController {
             Y9LoginUserHolder.setPerson(person);
             String fileName = file.getOriginalFilename();
             LOGGER.debug("fileName={}", fileName);
-            if (fileName.contains(File.separator)) {
+            if (fileName != null && fileName.contains(File.separator)) {
                 fileName = fileName.substring(fileName.lastIndexOf(File.separator) + 1);
             }
-            if (fileName.contains("\\")) {
+            if (fileName != null && fileName.contains("\\")) {
                 fileName = fileName.substring(fileName.lastIndexOf("\\") + 1);
             }
-            String fileType = fileName.substring(fileName.lastIndexOf(".")).toLowerCase();// 文件类型
-            if (!(fileType.equals(".doc") || fileType.equals(".docx") || fileType.equals(".pdf") || fileType.equals(".tif"))) {
+            String fileType = null;// 文件类型
+            if (fileName != null) {
+                fileType = fileName.substring(fileName.lastIndexOf(".")).toLowerCase();
+            }
+            if (fileType != null && !(fileType.equals(".doc") || fileType.equals(".docx") || fileType.equals(".pdf") || fileType.equals(".tif"))) {
                 map.put(UtilConsts.SUCCESS, false);
                 map.put("msg", "请上传后缀名为.doc,.docx,.pdf,.tif文件");
                 return map;
             }
             String isTaoHong = "";
-            if (fileType.equals(".pdf") || fileType.equals(".tif")) {
-                isTaoHong = "2";
-            } else {
-                isTaoHong = "0";
+            if (fileType != null) {
+                if (fileType.equals(".pdf") || fileType.equals(".tif")) {
+                    isTaoHong = "2";
+                } else {
+                    isTaoHong = "0";
+                }
             }
-            Object documentTitle = null;
+            Object documentTitle;
             if (StringUtils.isBlank(processInstanceId)) {
                 Map<String, Object> retMap = draft4PositionApi.getDraftByProcessSerialNumber(tenantId, processSerialNumber);
                 documentTitle = retMap.get("title");
@@ -814,19 +852,19 @@ public class FormNTKOController {
                 ProcessParamModel processModel = processParamApi.findByProcessInstanceId(tenantId, processInstanceId);
                 documentTitle = processModel.getTitle();
             }
-            String title = documentTitle != null ? (String)documentTitle : "正文";
+            String title = documentTitle != null ? (String) documentTitle : "正文";
             String fullPath = Y9FileStore.buildPath(Y9Context.getSystemName(), tenantId, "word", processSerialNumber);
             Y9FileStore y9FileStore = y9FileStoreService.uploadFile(file, fullPath, title + fileType);
             String result = transactionWordApi.uploadWord(tenantId, userId, title, fileType, processSerialNumber, isTaoHong, taskId, y9FileStore.getDisplayFileSize(), y9FileStore.getId());
             if (result.contains("true")) {
                 map.put(UtilConsts.SUCCESS, true);
-                if (fileType.equals(".pdf") || fileType.equals(".tif")) {
+                if (fileType != null && (fileType.equals(".pdf") || fileType.equals(".tif"))) {
                     map.put("isPdf", true);
                 }
             }
         } catch (Exception e) {
             map.put(UtilConsts.SUCCESS, false);
-            e.printStackTrace();
+            LOGGER.error("上传正文失败", e);
         }
         return map;
     }
@@ -834,29 +872,26 @@ public class FormNTKOController {
     /**
      * 草稿箱保存正文
      *
-     * @param fileType 文件类型
-     * @param isTaoHong 是否套红
+     * @param fileType            文件类型
+     * @param isTaoHong           是否套红
      * @param processSerialNumber 流程编号
-     * @param processInstanceId 流程实例id
-     * @param taskId 任务id
-     * @param tenantId 租户id
-     * @param userId 人员id
-     * @param request
-     * @param response
-     * @return
+     * @param processInstanceId   流程实例id
+     * @param taskId              任务id
+     * @param tenantId            租户id
+     * @param userId              人员id
+     * @return String
      */
     @RequestMapping(value = "/uploadWord", method = RequestMethod.POST)
-    public String uploadWord(@RequestParam String fileType, @RequestParam String isTaoHong, @RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String taskId, @RequestParam String tenantId, @RequestParam String userId, HttpServletRequest request,
-        HttpServletResponse response) {
+    public String uploadWord(@RequestParam String fileType, @RequestParam String isTaoHong, @RequestParam String processSerialNumber, @RequestParam String processInstanceId, @RequestParam String taskId, @RequestParam String tenantId, @RequestParam String userId, HttpServletRequest request) {
         Y9LoginUserHolder.setTenantId(tenantId);
         Person person = personApi.get(tenantId, userId).getData();
         Y9LoginUserHolder.setPerson(person);
-        MultipartHttpServletRequest multipartRequest = (MultipartHttpServletRequest)request;
+        MultipartHttpServletRequest multipartRequest = (MultipartHttpServletRequest) request;
         MultipartFile multipartFile = multipartRequest.getFile("currentDoc");
-        String title = "";
+        String title;
         String result = "success:false";
         try {
-            Object documentTitle = null;
+            Object documentTitle;
             if (StringUtils.isBlank(processInstanceId)) {
                 Map<String, Object> retMap = draft4PositionApi.getDraftByProcessSerialNumber(tenantId, processSerialNumber);
                 documentTitle = retMap.get("title");
@@ -865,12 +900,12 @@ public class FormNTKOController {
                 documentTitle = processModel.getTitle();
             }
 
-            title = documentTitle != null ? (String)documentTitle : "正文";
+            title = documentTitle != null ? (String) documentTitle : "正文";
             String fullPath = Y9FileStore.buildPath(Y9Context.getSystemName(), tenantId, "word", processSerialNumber);
             Y9FileStore y9FileStore = y9FileStoreService.uploadFile(multipartFile, fullPath, title + fileType);
             result = transactionWordApi.uploadWord(tenantId, userId, title, fileType, processSerialNumber, isTaoHong, taskId, y9FileStore.getDisplayFileSize(), y9FileStore.getId());
         } catch (Exception e) {
-            e.printStackTrace();
+            LOGGER.error("上传正文失败", e);
         }
         return result;
     }
